[gd_scene load_steps=5 format=3 uid="uid://0mhhrn2p5g52"]

[ext_resource type="Script" path="res://ui/MyCourse.gd" id="1_uwa1n"]
[ext_resource type="Texture2D" uid="uid://dhnruct8ey6vm" path="res://resource/icon_back.png" id="2_rs2fh"]
[ext_resource type="Texture2D" uid="uid://h7yk7nw1fy3s" path="res://resource/icon_add.png" id="3_7b1i0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfds1"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="MyCourse" type="CanvasLayer"]
script = ExtResource("1_uwa1n")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 2

[node name="Back" type="Button" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
icon = ExtResource("2_rs2fh")
expand_icon = true

[node name="TitlePage" type="Label" parent="TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "Мои курсы"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Add" type="Button" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
icon = ExtResource("3_7b1i0")
expand_icon = true

[node name="MainPage" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 112)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -56.0
offset_right = 200.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dfds1")

[node name="ScrollContainer" type="ScrollContainer" parent="MainPage"]
custom_minimum_size = Vector2(400, 412)
layout_mode = 2

[node name="CourseList" type="VBoxContainer" parent="MainPage/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="NullList" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "У вас нет курсов"

[connection signal="pressed" from="TopBar/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="TopBar/HBoxContainer/Add" to="." method="_on_add_pressed"]
